--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,21 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">User_Suite</th></tr>
-<tr><td><a href="#t0">User_Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">67,274</td><td></td><td></td></tr>
+<tr><td><a href="#t0">User_Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,106</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m0">loginAndBook</a></td><td rowspan="1">1728563411665</td><td rowspan="1">64329</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.BookingTest</td><td><a href="#m0">csu</a></td><td rowspan="1">1728584303905</td><td rowspan="1">4171</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1728584295525</td><td rowspan="1">4187</td></tr><tr class="passedeven"><td><a href="#m2">menu</a></td><td rowspan="1">1728584299725</td><td rowspan="1">4175</td></tr></tbody>
 </table>
-<h2>User_Test</h2><h3 id="m0">tests.BookingTest#loginAndBook</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Test failed at login: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//input[@value=&apos;SGN IN&apos;]&quot;}
-  (Session info: chrome=129.0.6668.90)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.3&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [9b0904a6671378bf3228dbf339814175, findElement {using=xpath, value=//input[@value=&apos;SGN IN&apos;]}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 129.0.6668.90, chrome: {chromedriverVersion: 129.0.6668.91 (b00bc8b76d60..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56862}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56862/devtoo..., se:cdpVersion: 129.0.6668.90, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 9b0904a6671378bf3228dbf339814175
-	at tests.BookingTest.loginAndBook(BookingTest.java:28)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>User_Test</h2><h3 id="m0">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
