--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-User_Suite" class="navigator-link">
-              <span class="suite-name border-failed">User_Suite</span>
+              <span class="suite-name border-passed">User_Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,21 +92,31 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-User_Suite" class="hide-methods failed suite-User_Suite"> (hide)</a> <!-- hide-methods failed suite-User_Suite -->
-                      <a href="#" panel-name="suite-User_Suite" class="show-methods failed suite-User_Suite"> (show)</a> <!-- show-methods failed suite-User_Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-User_Suite" class="hide-methods passed suite-User_Suite"> (hide)</a> <!-- hide-methods passed suite-User_Suite -->
+                      <a href="#" panel-name="suite-User_Suite" class="show-methods passed suite-User_Suite"> (show)</a> <!-- show-methods passed suite-User_Suite -->
                     </span>
-                    <div class="method-list-content failed suite-User_Suite">
+                    <div class="method-list-content passed suite-User_Suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="loginAndBook">loginAndBook</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="csu">csu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-User_Suite -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="menu">menu</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-User_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,34 +128,35 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-User_Suite" class="panel User_Suite">
-          <div class="suite-User_Suite-class-failed">
+          <div class="suite-User_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">tests.BookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginAndBook">
-                  </a> <!-- loginAndBook -->
-                  <span class="method-name">loginAndBook</span>
-                  <div class="stack-trace">java.lang.AssertionError: Test failed at login: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//input[@value=&apos;SGN IN&apos;]&quot;}
-  (Session info: chrome=129.0.6668.90)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.3&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [9b0904a6671378bf3228dbf339814175, findElement {using=xpath, value=//input[@value=&apos;SGN IN&apos;]}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 129.0.6668.90, chrome: {chromedriverVersion: 129.0.6668.91 (b00bc8b76d60..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:56862}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:56862/devtoo..., se:cdpVersion: 129.0.6668.90, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 9b0904a6671378bf3228dbf339814175
-	at tests.BookingTest.loginAndBook(BookingTest.java:28)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
+                  <a name="csu">
+                  </a> <!-- csu -->
+                  <span class="method-name">csu</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login">
+                  </a> <!-- login -->
+                  <span class="method-name">login</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="menu">
+                  </a> <!-- menu -->
+                  <span class="method-name">menu</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-User_Suite-class-failed -->
+          </div> <!-- suite-User_Suite-class-passed -->
         </div> <!-- panel User_Suite -->
         <div panel-name="test-xml-User_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -203,16 +214,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginAndBook')
+data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 64329);
+data.setCell(0, 3, 4187);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'menu')
+data.setCell(1, 2, 'tests.BookingTest')
+data.setCell(1, 3, 4175);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'csu')
+data.setCell(2, 2, 'tests.BookingTest')
+data.setCell(2, 3, 4171);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -239,20 +258,26 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">tests.BookingTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
+              <div class="configuration-class before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginAndBook</span>
-                <span class="method-start">1462 ms</span>
+                <span class="method-name">login</span>
+                <span class="method-start">1536 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
+              <div class="test-method">
+                <span class="method-name">menu</span>
+                <span class="method-start">5736 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">csu</span>
+                <span class="method-start">9916 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">66881 ms</span>
-              </div> <!-- configuration-method after -->
+                <span class="method-start">14096 ms</span>
+              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
