--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">User_Suite</th></tr>
-<tr><td><a href="#t0">User_Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,106</td><td></td><td></td></tr>
+<tr><td><a href="#t0">User_Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">160,427</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">tests.BookingTest</td><td><a href="#m0">csu</a></td><td rowspan="1">1728584303905</td><td rowspan="1">4171</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1728584295525</td><td rowspan="1">4187</td></tr><tr class="passedeven"><td><a href="#m2">menu</a></td><td rowspan="1">1728584299725</td><td rowspan="1">4175</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.BookingTest</td><td><a href="#m0">agent</a></td><td rowspan="1">1728673323666</td><td rowspan="1">63030</td></tr><tr class="passedeven"><td><a href="#m1">csu</a></td><td rowspan="1">1728673312861</td><td rowspan="1">10800</td></tr><tr class="passedeven"><td><a href="#m2">login</a></td><td rowspan="1">1728673228742</td><td rowspan="1">79965</td></tr><tr class="passedeven"><td><a href="#m3">menu</a></td><td rowspan="1">1728673308722</td><td rowspan="1">4136</td></tr></tbody>
 </table>
-<h2>User_Test</h2><h3 id="m0">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>User_Test</h2><h3 id="m0">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
