--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,11 @@
                       <a href="#" panel-name="suite-User_Suite" class="show-methods passed suite-User_Suite"> (show)</a> <!-- show-methods passed suite-User_Suite -->
                     </span>
                     <div class="method-list-content passed suite-User_Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="agent">agent</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="csu">csu</a> <!-- method navigator-link -->
@@ -134,6 +139,13 @@
               <span class="class-name">tests.BookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="agent">
+                  </a> <!-- agent -->
+                  <span class="method-name">agent</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="csu">
@@ -214,24 +226,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 4187);
+data.setCell(0, 3, 79965);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'menu')
+data.setCell(1, 1, 'agent')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 4175);
+data.setCell(1, 3, 63030);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'csu')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 4171);
+data.setCell(2, 3, 10800);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'menu')
+data.setCell(3, 2, 'tests.BookingTest')
+data.setCell(3, 3, 4136);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -264,19 +280,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">1536 ms</span>
+                <span class="method-start">2006 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">menu</span>
-                <span class="method-start">5736 ms</span>
+                <span class="method-start">81986 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">csu</span>
-                <span class="method-start">9916 ms</span>
+                <span class="method-start">86125 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">agent</span>
+                <span class="method-start">96930 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">14096 ms</span>
+                <span class="method-start">159980 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
