--- a/reports/Test-Report-2024.10.12.14.03.45.html
+++ b/reports/Test-Report-2024.10.12.14.03.45.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">CRS_NG</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 12, 2024 12:30:26 am</span></a>
+<a href="#"><span class="badge badge-primary">Oct 12, 2024 02:03:45 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">login</p>
             <p class="text-sm">
-              <span>12:30:28 am</span> / <span>00:01:19:963</span>
+              <span>2:03:47 pm</span> / <span>00:00:04:565</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">login</h5>
-<span class='badge badge-success'>10.12.2024 12:30:28 am</span>
-<span class='badge badge-danger'>10.12.2024 12:31:48 am</span>
-<span class='badge badge-default'>00:01:19:963</span>
+<span class='badge badge-success'>10.12.2024 2:03:47 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:03:51 pm</span>
+<span class='badge badge-default'>00:00:04:565</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:31:48 am</td>
+        <td>2:03:51 pm</td>
         <td>
           Test Passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">menu</p>
             <p class="text-sm">
-              <span>12:31:48 am</span> / <span>00:00:04:136</span>
+              <span>2:03:51 pm</span> / <span>00:00:07:397</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">menu</h5>
-<span class='badge badge-success'>10.12.2024 12:31:48 am</span>
-<span class='badge badge-danger'>10.12.2024 12:31:52 am</span>
-<span class='badge badge-default'>00:00:04:136</span>
+<span class='badge badge-success'>10.12.2024 2:03:51 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:03:59 pm</span>
+<span class='badge badge-default'>00:00:07:397</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:31:52 am</td>
+        <td>2:03:59 pm</td>
         <td>
           Test Passed
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">csu</p>
             <p class="text-sm">
-              <span>12:31:52 am</span> / <span>00:00:10:800</span>
+              <span>2:03:59 pm</span> / <span>00:00:16:721</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">csu</h5>
-<span class='badge badge-success'>10.12.2024 12:31:52 am</span>
-<span class='badge badge-danger'>10.12.2024 12:32:03 am</span>
-<span class='badge badge-default'>00:00:10:800</span>
+<span class='badge badge-success'>10.12.2024 2:03:59 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:04:16 pm</span>
+<span class='badge badge-default'>00:00:16:721</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:32:03 am</td>
+        <td>2:04:16 pm</td>
         <td>
           Test Passed
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">agent</p>
             <p class="text-sm">
-              <span>12:32:03 am</span> / <span>00:01:03:043</span>
+              <span>2:04:16 pm</span> / <span>00:00:41:290</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,9 +213,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">agent</h5>
-<span class='badge badge-success'>10.12.2024 12:32:03 am</span>
-<span class='badge badge-danger'>10.12.2024 12:33:06 am</span>
-<span class='badge badge-default'>00:01:03:043</span>
+<span class='badge badge-success'>10.12.2024 2:04:16 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:04:57 pm</span>
+<span class='badge badge-default'>00:00:41:290</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -228,7 +228,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:33:06 am</td>
+        <td>2:04:57 pm</td>
         <td>
           Test Passed
         </td>
@@ -252,13 +252,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 12, 2024 12:30:26 am</h3>
+<h3>Oct 12, 2024 02:03:45 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 12, 2024 12:33:07 am</h3>
+<h3>Oct 12, 2024 02:04:57 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -328,7 +328,7 @@
 </div></div>
 <script>
 var timeline = {
-"login":79.963,"menu":4.136,"csu":10.8,"agent":63.043
+"login":4.565,"menu":7.397,"csu":16.721,"agent":41.29
 };
 </script>
 <div class="row">
