--- a/reports/Test-Report-2024.10.12.14.06.26.html
+++ b/reports/Test-Report-2024.10.12.14.06.26.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">CRS_NG</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Oct 11, 2024 09:18:14 pm</span></a>
+<a href="#"><span class="badge badge-primary">Oct 12, 2024 02:06:26 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">login</p>
             <p class="text-sm">
-              <span>9:18:17 pm</span> / <span>00:00:57:696</span>
+              <span>2:06:27 pm</span> / <span>00:00:15:784</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">login</h5>
-<span class='badge badge-success'>10.11.2024 9:18:17 pm</span>
-<span class='badge badge-danger'>10.11.2024 9:19:14 pm</span>
-<span class='badge badge-default'>00:00:57:696</span>
+<span class='badge badge-success'>10.12.2024 2:06:27 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:06:43 pm</span>
+<span class='badge badge-default'>00:00:15:784</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:14 pm</td>
+        <td>2:06:43 pm</td>
         <td>
           Test Passed
         </td>
@@ -122,7 +122,7 @@
           <div class="test-detail">
             <p class="name">menu</p>
             <p class="text-sm">
-              <span>9:19:14 pm</span> / <span>00:00:04:171</span>
+              <span>2:06:43 pm</span> / <span>00:00:04:139</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -131,9 +131,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">menu</h5>
-<span class='badge badge-success'>10.11.2024 9:19:14 pm</span>
-<span class='badge badge-danger'>10.11.2024 9:19:19 pm</span>
-<span class='badge badge-default'>00:00:04:171</span>
+<span class='badge badge-success'>10.12.2024 2:06:43 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:06:47 pm</span>
+<span class='badge badge-default'>00:00:04:139</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:19 pm</td>
+        <td>2:06:47 pm</td>
         <td>
           Test Passed
         </td>
@@ -163,7 +163,7 @@
           <div class="test-detail">
             <p class="name">csu</p>
             <p class="text-sm">
-              <span>9:19:19 pm</span> / <span>00:00:06:239</span>
+              <span>2:06:47 pm</span> / <span>00:00:19:459</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -172,9 +172,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">csu</h5>
-<span class='badge badge-success'>10.11.2024 9:19:19 pm</span>
-<span class='badge badge-danger'>10.11.2024 9:19:25 pm</span>
-<span class='badge badge-default'>00:00:06:239</span>
+<span class='badge badge-success'>10.12.2024 2:06:47 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:07:07 pm</span>
+<span class='badge badge-default'>00:00:19:459</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -187,7 +187,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:25 pm</td>
+        <td>2:07:07 pm</td>
         <td>
           Test Passed
         </td>
@@ -204,7 +204,7 @@
           <div class="test-detail">
             <p class="name">agent</p>
             <p class="text-sm">
-              <span>9:19:25 pm</span> / <span>00:00:07:761</span>
+              <span>2:07:07 pm</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -213,30 +213,16 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">agent</h5>
-<span class='badge badge-success'>10.11.2024 9:19:25 pm</span>
-<span class='badge badge-danger'>10.11.2024 9:19:33 pm</span>
-<span class='badge badge-default'>00:00:07:761</span>
+<span class='badge badge-success'>10.12.2024 2:07:07 pm</span>
+<span class='badge badge-danger'>10.12.2024 2:07:07 pm</span>
+<span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
 </div>
 </div>
-</div><div class="detail-body mt-4">
-<table class="table table-sm">
-  <thead><tr><th class="status-col">Status</th><th class="timestamp-col">Timestamp</th><th class="details-col">Details</th></tr></thead>
-  <tbody>
-      <tr class="event-row">
-        <td><span class="badge log pass-bg">Pass</span></td>
-        <td>9:19:33 pm</td>
-        <td>
-          Test Passed
-        </td>
-      </tr>
-  </tbody>
-</table>
-</div>
-          </div>
+</div>          </div>
         </li>
       </ul>
     </div>
@@ -252,13 +238,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Oct 11, 2024 09:18:14 pm</h3>
+<h3>Oct 12, 2024 02:06:26 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Oct 11, 2024 09:19:33 pm</h3>
+<h3>Oct 12, 2024 02:20:35 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -309,7 +295,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>3</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -328,7 +314,7 @@
 </div></div>
 <script>
 var timeline = {
-"login":57.696,"menu":4.171,"csu":6.239,"agent":7.761
+"login":15.784,"menu":4.139,"csu":19.459,"agent":0
 };
 </script>
 <div class="row">
@@ -380,7 +366,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 4,
+passEvents: 3,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
