--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,25 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">User_Suite</th></tr>
-<tr><td><a href="#t0">User_Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">102,446</td><td></td><td></td></tr>
+<tr><td><a href="#t0">User_Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">94,918</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m0">cruises</a></td><td rowspan="1">1728838241412</td><td rowspan="1">3391</td></tr><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">tests.BookingTest</td><td><a href="#m1">agent</a></td><td rowspan="1">1728838171553</td><td rowspan="1">64389</td></tr><tr class="passedeven"><td><a href="#m2">csu</a></td><td rowspan="1">1728838161536</td><td rowspan="1">10012</td></tr><tr class="passedeven"><td><a href="#m3">login</a></td><td rowspan="1">1728838144738</td><td rowspan="1">12597</td></tr><tr class="passedeven"><td><a href="#m4">menu</a></td><td rowspan="1">1728838157351</td><td rowspan="1">4178</td></tr><tr class="passedeven"><td><a href="#m5">newBooking</a></td><td rowspan="1">1728838235949</td><td rowspan="1">5450</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">tests.BookingTest</td><td><a href="#m0">agent</a></td><td rowspan="1">1728920741986</td><td rowspan="1">60071</td></tr><tr class="passedeven"><td><a href="#m1">cruises</a></td><td rowspan="1">1728920802374</td><td rowspan="1">16548</td></tr><tr class="passedeven"><td><a href="#m2">csu</a></td><td rowspan="1">1728920735439</td><td rowspan="1">6545</td></tr><tr class="passedeven"><td><a href="#m3">login</a></td><td rowspan="1">1728920725688</td><td rowspan="1">5100</td></tr><tr class="passedeven"><td><a href="#m4">menu</a></td><td rowspan="1">1728920730796</td><td rowspan="1">4643</td></tr><tr class="passedeven"><td><a href="#m5">newBooking</a></td><td rowspan="1">1728920802081</td><td rowspan="1">292</td></tr></tbody>
 </table>
-<h2>User_Test</h2><h3 id="m0">tests.BookingTest#cruises</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failed to select the package or selecting the suite: stale element reference: stale element not found in the current frame
-  (Session info: chrome=129.0.6668.100)
-For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#stale-element-reference-exception
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.3&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [18bcf0bbfc319ec568a4c2cbb4e7d490, clickElement {id=f.836BDC080196952D949BE2EE73FD21CC.d.B3E71EEDDF4CBC2533110C483C273956.e.473}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 129.0.6668.100, chrome: {chromedriverVersion: 129.0.6668.100 (cf58cba358d..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52280}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:52280/devtoo..., se:cdpVersion: 129.0.6668.100, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (18bcf0bbfc319ec568a4c2cbb4e7d490)] -&gt; xpath: (//li[@class=&apos;cabin-content ng-star-inserted&apos;])[1]]
-Session ID: 18bcf0bbfc319ec568a4c2cbb4e7d490
-	at pages.CruiseBooking.packages(CruiseBooking.java:68)
-	at tests.BookingTest.cruises(BookingTest.java:132)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>User_Test</h2><h3 id="m0">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.BookingTest#cruises</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
