--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
+                    <span class="method-stats">6 methods, 1 failed,  5 skipped,  </span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,44 +103,44 @@
                     <div class="method-list-content failed suite-User_Suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-User_Suite -->
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-User_Suite" class="hide-methods passed suite-User_Suite"> (hide)</a> <!-- hide-methods passed suite-User_Suite -->
-                      <a href="#" panel-name="suite-User_Suite" class="show-methods passed suite-User_Suite"> (show)</a> <!-- show-methods passed suite-User_Suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-User_Suite" class="hide-methods skipped suite-User_Suite"> (hide)</a> <!-- hide-methods skipped suite-User_Suite -->
+                      <a href="#" panel-name="suite-User_Suite" class="show-methods skipped suite-User_Suite"> (show)</a> <!-- show-methods skipped suite-User_Suite -->
                     </span>
-                    <div class="method-list-content passed suite-User_Suite">
+                    <div class="method-list-content skipped suite-User_Suite">
                       <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="skipped.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="agent">agent</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="skipped.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="csu">csu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="skipped.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="menu">menu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="passed.png" width="3%"/>
+                        <img src="skipped.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newBooking">newBooking</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-User_Suite -->
+                    </div> <!-- method-list-content skipped suite-User_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -160,17 +160,11 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="cruises">
-                  </a> <!-- cruises -->
-                  <span class="method-name">cruises</span>
-                  <div class="stack-trace">java.lang.AssertionError: Failed to click on new booking button: Expected condition failed: waiting for element to be clickable: By.xpath: (//i[@class=&apos;icon icon-right-arrow m-l-2&apos;])[1] (tried for 30 second(s) with 500 milliseconds interval)
-Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 130.0.6723.91, chrome: {chromedriverVersion: 130.0.6723.91 (53ac07678369..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:62360}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:62360/devtoo..., se:cdpVersion: 130.0.6723.91, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 92188883fea015eb0a7de2c065ff94a4
-	at pages.CruiseBooking.voyage(CruiseBooking.java:49)
-	at tests.BookingTest.cruises(BookingTest.java:125)
+                  <a name="login">
+                  </a> <!-- login -->
+                  <span class="method-name">login</span>
+                  <div class="stack-trace">java.lang.AssertionError: Test failed at login: Login failed due to incorrect credentials.
+	at tests.BookingTest.login(BookingTest.java:34)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 26 stack frames
 </div> <!-- stack-trace -->
@@ -178,9 +172,9 @@ Session ID: 92188883fea015eb0a7de2c065ff94a4
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-User_Suite-class-failed -->
-          <div class="suite-User_Suite-class-passed">
+          <div class="suite-User_Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="skipped.png"/>
               <span class="class-name">tests.BookingTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -189,6 +183,23 @@ Session ID: 92188883fea015eb0a7de2c065ff94a4
                   <a name="agent">
                   </a> <!-- agent -->
                   <span class="method-name">agent</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.agent() on instance tests.BookingTest@3fffff43 depends on not successfully finished methods 
+[tests.BookingTest.csu() on instance tests.BookingTest@3fffff43]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="cruises">
+                  </a> <!-- cruises -->
+                  <span class="method-name">cruises</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.cruises() on instance tests.BookingTest@3fffff43 depends on not successfully finished methods 
+[tests.BookingTest.newBooking() on instance tests.BookingTest@3fffff43]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -196,13 +207,11 @@ Session ID: 92188883fea015eb0a7de2c065ff94a4
                   <a name="csu">
                   </a> <!-- csu -->
                   <span class="method-name">csu</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="login">
-                  </a> <!-- login -->
-                  <span class="method-name">login</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.csu() on instance tests.BookingTest@3fffff43 depends on not successfully finished methods 
+[tests.BookingTest.menu() on instance tests.BookingTest@3fffff43]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -210,6 +219,11 @@ Session ID: 92188883fea015eb0a7de2c065ff94a4
                   <a name="menu">
                   </a> <!-- menu -->
                   <span class="method-name">menu</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.menu() on instance tests.BookingTest@3fffff43 depends on not successfully finished methods 
+[tests.BookingTest.login() on instance tests.BookingTest@3fffff43]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -217,10 +231,15 @@ Session ID: 92188883fea015eb0a7de2c065ff94a4
                   <a name="newBooking">
                   </a> <!-- newBooking -->
                   <span class="method-name">newBooking</span>
+                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.newBooking() on instance tests.BookingTest@3fffff43 depends on not successfully finished methods 
+[tests.BookingTest.agent() on instance tests.BookingTest@3fffff43]
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-User_Suite-class-passed -->
+          </div> <!-- suite-User_Suite-class-skipped -->
         </div> <!-- panel User_Suite -->
         <div panel-name="test-xml-User_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -280,34 +299,34 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'agent')
+data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 189242);
+data.setCell(0, 3, 63780);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'cruises')
+data.setCell(1, 1, 'menu')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 60054);
+data.setCell(1, 3, 1);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'login')
+data.setCell(2, 1, 'cruises')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 16734);
+data.setCell(2, 3, 0);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'csu')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 14549);
+data.setCell(3, 3, 0);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'menu')
+data.setCell(4, 1, 'newBooking')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 4187);
+data.setCell(4, 3, 0);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'newBooking')
+data.setCell(5, 1, 'agent')
 data.setCell(5, 2, 'tests.BookingTest')
-data.setCell(5, 3, 191);
+data.setCell(5, 3, 0);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -339,30 +358,10 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">login</span>
-                <span class="method-start">1498 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">menu</span>
-                <span class="method-start">18251 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">csu</span>
-                <span class="method-start">22445 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">agent</span>
-                <span class="method-start">36998 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">newBooking</span>
-                <span class="method-start">226246 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">cruises</span>
-                <span class="method-start">226442 ms</span>
+                <span class="method-name">login</span>
+                <span class="method-start">1596 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
