--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,33 +9,30 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">User_Suite</th></tr>
-<tr><td><a href="#t0">User_Test</a></td><td class="num">0</td><td class="num attn">5</td><td class="num">0</td><td class="num attn">1</td><td class="num">66,474</td><td></td><td></td></tr>
+<tr><td><a href="#t0">User_Test</a></td><td class="num">4</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">47,774</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m0">login</a></td><td rowspan="1">1731424139628</td><td rowspan="1">63371</td></tr><tr><th colspan="4">User_Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="5">tests.BookingTest</td><td><a href="#m1">agent</a></td><td rowspan="1">1731424204573</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m2">cruises</a></td><td rowspan="1">1731424204580</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m3">csu</a></td><td rowspan="1">1731424204567</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m4">menu</a></td><td rowspan="1">1731424204546</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m5">newBooking</a></td><td rowspan="1">1731424204577</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m0">newBooking</a></td><td rowspan="1">1731661393776</td><td rowspan="1">1417</td></tr><tr><th colspan="4">User_Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m1">cruises</a></td><td rowspan="1">1731661396325</td><td rowspan="1">0</td></tr><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.BookingTest</td><td><a href="#m2">agent</a></td><td rowspan="1">1731661379979</td><td rowspan="1">13797</td></tr><tr class="passedeven"><td><a href="#m3">csu</a></td><td rowspan="1">1731661365052</td><td rowspan="1">14921</td></tr><tr class="passedeven"><td><a href="#m4">login</a></td><td rowspan="1">1731661351520</td><td rowspan="1">9312</td></tr><tr class="passedeven"><td><a href="#m5">menu</a></td><td rowspan="1">1731661360865</td><td rowspan="1">4184</td></tr></tbody>
 </table>
-<h2>User_Test</h2><h3 id="m0">tests.BookingTest#login</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Test failed at login: Login failed due to incorrect credentials.
-	at tests.BookingTest.login(BookingTest.java:34)
+<h2>User_Test</h2><h3 id="m0">tests.BookingTest#newBooking</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failed to click on new booking button: element click intercepted: Element &lt;button _ngcontent-jkk-c628=&quot;&quot; class=&quot;btn btn-primary pe-auto&quot; title=&quot;&quot;&gt;...&lt;/button&gt; is not clickable at point (1454, 91). Other element would receive the click: &lt;div _ngcontent-jkk-c462=&quot;&quot; class=&quot;ngx-spinner-overlay ng-tns-c462-0 ng-trigger ng-trigger-fadeIn ng-star-inserted&quot; style=&quot;background-color: rgba(51, 51, 51, 0.8); z-index: 99999; position: fixed; opacity: 1;&quot;&gt;...&lt;/div&gt;
+  (Session info: chrome=130.0.6723.119)
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [394867f4cc53ac23bd31b9ff6c687834, clickElement {id=f.C5CEEFA1AF2B0F2FCB5B741BBC9C9E09.d.92695AC5F0ECBF74CF2D626FF01A7207.e.459}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 130.0.6723.119, chrome: {chromedriverVersion: 130.0.6723.116 (6ac35f94ae3..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:51652}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:51652/devtoo..., se:cdpVersion: 130.0.6723.119, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (394867f4cc53ac23bd31b9ff6c687834)] -&gt; xpath: //button[@class=&apos;btn btn-primary pe-auto&apos;]]
+Session ID: 394867f4cc53ac23bd31b9ff6c687834
+	at pages.NewBooking.booking(NewBooking.java:44)
+	at tests.BookingTest.newBooking(BookingTest.java:121)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.BookingTest#agent</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.agent() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.csu() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.BookingTest#cruises</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.cruises() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
+<h3 id="m1">tests.BookingTest#cruises</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.cruises() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
 [tests.BookingTest.newBooking() on instance tests.BookingTest@7b324585]
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.BookingTest#csu</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.csu() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.menu() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.BookingTest#menu</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.menu() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.login() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">tests.BookingTest#newBooking</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.newBooking() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.agent() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
