--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,  5 skipped,  </span>
+                    <span class="method-stats">6 methods, 1 failed,  1 skipped,  4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,7 +103,7 @@
                     <div class="method-list-content failed suite-User_Suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newBooking">newBooking</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-User_Suite -->
@@ -117,30 +117,39 @@
                     <div class="method-list-content skipped suite-User_Suite">
                       <span>
                         <img src="skipped.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-User_Suite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-User_Suite" class="hide-methods passed suite-User_Suite"> (hide)</a> <!-- hide-methods passed suite-User_Suite -->
+                      <a href="#" panel-name="suite-User_Suite" class="show-methods passed suite-User_Suite"> (show)</a> <!-- show-methods passed suite-User_Suite -->
+                    </span>
+                    <div class="method-list-content passed suite-User_Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="agent">agent</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="cruises">cruises</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="csu">csu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="menu">menu</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newBooking">newBooking</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="menu">menu</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-User_Suite -->
+                    </div> <!-- method-list-content passed suite-User_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -160,11 +169,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login">
-                  </a> <!-- login -->
-                  <span class="method-name">login</span>
-                  <div class="stack-trace">java.lang.AssertionError: Test failed at login: Login failed due to incorrect credentials.
-	at tests.BookingTest.login(BookingTest.java:34)
+                  <a name="newBooking">
+                  </a> <!-- newBooking -->
+                  <span class="method-name">newBooking</span>
+                  <div class="stack-trace">java.lang.AssertionError: Failed to click on new booking button: element click intercepted: Element &lt;button _ngcontent-jkk-c628=&quot;&quot; class=&quot;btn btn-primary pe-auto&quot; title=&quot;&quot;&gt;...&lt;/button&gt; is not clickable at point (1454, 91). Other element would receive the click: &lt;div _ngcontent-jkk-c462=&quot;&quot; class=&quot;ngx-spinner-overlay ng-tns-c462-0 ng-trigger ng-trigger-fadeIn ng-star-inserted&quot; style=&quot;background-color: rgba(51, 51, 51, 0.8); z-index: 99999; position: fixed; opacity: 1;&quot;&gt;...&lt;/div&gt;
+  (Session info: chrome=130.0.6723.119)
+Build info: version: &apos;4.25.0&apos;, revision: &apos;8a8aea2337&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;23.0.1&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [394867f4cc53ac23bd31b9ff6c687834, clickElement {id=f.C5CEEFA1AF2B0F2FCB5B741BBC9C9E09.d.92695AC5F0ECBF74CF2D626FF01A7207.e.459}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 130.0.6723.119, chrome: {chromedriverVersion: 130.0.6723.116 (6ac35f94ae3..., userDataDir: C:\Users\EFFIAS~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:51652}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:51652/devtoo..., se:cdpVersion: 130.0.6723.119, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[ChromeDriver: chrome on windows (394867f4cc53ac23bd31b9ff6c687834)] -&gt; xpath: //button[@class=&apos;btn btn-primary pe-auto&apos;]]
+Session ID: 394867f4cc53ac23bd31b9ff6c687834
+	at pages.NewBooking.booking(NewBooking.java:44)
+	at tests.BookingTest.newBooking(BookingTest.java:121)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
 ... Removed 26 stack frames
 </div> <!-- stack-trace -->
@@ -180,18 +198,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="agent">
-                  </a> <!-- agent -->
-                  <span class="method-name">agent</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.agent() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.csu() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="cruises">
                   </a> <!-- cruises -->
                   <span class="method-name">cruises</span>
@@ -202,16 +208,33 @@
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-User_Suite-class-skipped -->
+          <div class="suite-User_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.BookingTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="agent">
+                  </a> <!-- agent -->
+                  <span class="method-name">agent</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="csu">
                   </a> <!-- csu -->
                   <span class="method-name">csu</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.csu() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.menu() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login">
+                  </a> <!-- login -->
+                  <span class="method-name">login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -219,27 +242,10 @@
                   <a name="menu">
                   </a> <!-- menu -->
                   <span class="method-name">menu</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.menu() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.login() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="newBooking">
-                  </a> <!-- newBooking -->
-                  <span class="method-name">newBooking</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.newBooking() on instance tests.BookingTest@7b324585 depends on not successfully finished methods 
-[tests.BookingTest.agent() on instance tests.BookingTest@7b324585]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-User_Suite-class-skipped -->
+          </div> <!-- suite-User_Suite-class-passed -->
         </div> <!-- panel User_Suite -->
         <div panel-name="test-xml-User_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -299,34 +305,34 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'login')
+data.setCell(0, 1, 'csu')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 63371);
+data.setCell(0, 3, 14921);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'cruises')
+data.setCell(1, 1, 'agent')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 0);
+data.setCell(1, 3, 13797);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'menu')
+data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 0);
+data.setCell(2, 3, 9312);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'newBooking')
+data.setCell(3, 1, 'menu')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 0);
+data.setCell(3, 3, 4184);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'csu')
+data.setCell(4, 1, 'newBooking')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 0);
+data.setCell(4, 3, 1417);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'agent')
+data.setCell(5, 1, 'cruises')
 data.setCell(5, 2, 'tests.BookingTest')
 data.setCell(5, 3, 0);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -358,10 +364,26 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">login</span>
+                <span class="method-start">2852 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">menu</span>
+                <span class="method-start">12197 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">csu</span>
+                <span class="method-start">16384 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">agent</span>
+                <span class="method-start">31311 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">login</span>
-                <span class="method-start">1398 ms</span>
+                <span class="method-name">newBooking</span>
+                <span class="method-start">45108 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
