--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,23 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">User_Suite</th></tr>
-<tr><td><a href="#t0">User_Test</a></td><td class="num">6</td><td class="num attn">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">106,549</td><td></td><td></td></tr>
+<tr><td><a href="#t0">User_Test</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">430,456</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m0">suiteTab</a></td><td rowspan="1">1731996394603</td><td rowspan="1">196</td></tr><tr><th colspan="4">User_Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">tests.BookingTest</td><td><a href="#m1">previewTab</a></td><td rowspan="1">1731996395197</td><td rowspan="1">0</td></tr><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">tests.BookingTest</td><td><a href="#m2">agent</a></td><td rowspan="1">1731996306969</td><td rowspan="1">73985</td></tr><tr class="passedeven"><td><a href="#m3">csu</a></td><td rowspan="1">1731996300772</td><td rowspan="1">6191</td></tr><tr class="passedeven"><td><a href="#m4">login</a></td><td rowspan="1">1731996290462</td><td rowspan="1">10045</td></tr><tr class="passedeven"><td><a href="#m5">menu</a></td><td rowspan="1">1731996300520</td><td rowspan="1">248</td></tr><tr class="passedeven"><td><a href="#m6">packageTab</a></td><td rowspan="1">1731996389744</td><td rowspan="1">4855</td></tr><tr class="passedeven"><td><a href="#m7">voyageTab</a></td><td rowspan="1">1731996380958</td><td rowspan="1">8783</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">User_Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">User_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="9">tests.BookingTest</td><td><a href="#m0">agent</a></td><td rowspan="1">1732017279179</td><td rowspan="1">71186</td></tr><tr class="passedeven"><td><a href="#m1">csu</a></td><td rowspan="1">1732017268585</td><td rowspan="1">10592</td></tr><tr class="passedeven"><td><a href="#m2">login</a></td><td rowspan="1">1732017259404</td><td rowspan="1">8994</td></tr><tr class="passedeven"><td><a href="#m3">menu</a></td><td rowspan="1">1732017268408</td><td rowspan="1">174</td></tr><tr class="passedeven"><td><a href="#m4">newProfile</a></td><td rowspan="1">1732017624096</td><td rowspan="1">64196</td></tr><tr class="passedeven"><td><a href="#m5">packageTab</a></td><td rowspan="1">1732017360193</td><td rowspan="1">4431</td></tr><tr class="passedeven"><td><a href="#m6">previewTab</a></td><td rowspan="1">1732017553272</td><td rowspan="1">70817</td></tr><tr class="passedeven"><td><a href="#m7">suiteTab</a></td><td rowspan="1">1732017364626</td><td rowspan="1">188643</td></tr><tr class="passedeven"><td><a href="#m8">voyageTab</a></td><td rowspan="1">1732017350367</td><td rowspan="1">9824</td></tr></tbody>
 </table>
-<h2>User_Test</h2><h3 id="m0">tests.BookingTest#suiteTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Suite tab not selected. expected [true] but found [false]
-	at tests.BookingTest.suiteTab(BookingTest.java:190)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.BookingTest#previewTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method tests.BookingTest.previewTab() on instance tests.BookingTest@1ef3efa8 depends on not successfully finished methods 
-[tests.BookingTest.suiteTab() on instance tests.BookingTest@1ef3efa8]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">tests.BookingTest#packageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">tests.BookingTest#voyageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>User_Test</h2><h3 id="m0">tests.BookingTest#agent</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.BookingTest#csu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">tests.BookingTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">tests.BookingTest#menu</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">tests.BookingTest#newProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">tests.BookingTest#packageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">tests.BookingTest#previewTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">tests.BookingTest#suiteTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">tests.BookingTest#voyageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
