--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-User_Suite" class="navigator-link">
-              <span class="suite-name border-failed">User_Suite</span>
+              <span class="suite-name border-passed">User_Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,35 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods, 1 failed,  1 skipped,  6 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-User_Suite" class="hide-methods failed suite-User_Suite"> (hide)</a> <!-- hide-methods failed suite-User_Suite -->
-                      <a href="#" panel-name="suite-User_Suite" class="show-methods failed suite-User_Suite"> (show)</a> <!-- show-methods failed suite-User_Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-User_Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="suiteTab">suiteTab</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-User_Suite -->
-                  </li>
-                  <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-User_Suite" class="hide-methods skipped suite-User_Suite"> (hide)</a> <!-- hide-methods skipped suite-User_Suite -->
-                      <a href="#" panel-name="suite-User_Suite" class="show-methods skipped suite-User_Suite"> (show)</a> <!-- show-methods skipped suite-User_Suite -->
-                    </span>
-                    <div class="method-list-content skipped suite-User_Suite">
-                      <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="previewTab">previewTab</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content skipped suite-User_Suite -->
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -151,7 +123,22 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="newProfile">newProfile</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="packageTab">packageTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="previewTab">previewTab</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-User_Suite" title="tests.BookingTest" class="method navigator-link" hash-for-method="suiteTab">suiteTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -171,46 +158,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-User_Suite" class="panel User_Suite">
-          <div class="suite-User_Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">tests.BookingTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="suiteTab">
-                  </a> <!-- suiteTab -->
-                  <span class="method-name">suiteTab</span>
-                  <div class="stack-trace">java.lang.AssertionError: Suite tab not selected. expected [true] but found [false]
-	at tests.BookingTest.suiteTab(BookingTest.java:190)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 28 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-User_Suite-class-failed -->
-          <div class="suite-User_Suite-class-skipped">
-            <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
-              <span class="class-name">tests.BookingTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="previewTab">
-                  </a> <!-- previewTab -->
-                  <span class="method-name">previewTab</span>
-                  <div class="stack-trace">java.lang.Throwable: Method tests.BookingTest.previewTab() on instance tests.BookingTest@1ef3efa8 depends on not successfully finished methods 
-[tests.BookingTest.suiteTab() on instance tests.BookingTest@1ef3efa8]
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 18 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-User_Suite-class-skipped -->
           <div class="suite-User_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -247,9 +194,30 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="newProfile">
+                  </a> <!-- newProfile -->
+                  <span class="method-name">newProfile</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="packageTab">
                   </a> <!-- packageTab -->
                   <span class="method-name">packageTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="previewTab">
+                  </a> <!-- previewTab -->
+                  <span class="method-name">previewTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="suiteTab">
+                  </a> <!-- suiteTab -->
+                  <span class="method-name">suiteTab</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -318,44 +286,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(9);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'agent')
+data.setCell(0, 1, 'suiteTab')
 data.setCell(0, 2, 'tests.BookingTest')
-data.setCell(0, 3, 73985);
+data.setCell(0, 3, 188643);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'login')
+data.setCell(1, 1, 'agent')
 data.setCell(1, 2, 'tests.BookingTest')
-data.setCell(1, 3, 10045);
+data.setCell(1, 3, 71186);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'voyageTab')
+data.setCell(2, 1, 'previewTab')
 data.setCell(2, 2, 'tests.BookingTest')
-data.setCell(2, 3, 8783);
+data.setCell(2, 3, 70817);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'csu')
+data.setCell(3, 1, 'newProfile')
 data.setCell(3, 2, 'tests.BookingTest')
-data.setCell(3, 3, 6191);
+data.setCell(3, 3, 64196);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'packageTab')
+data.setCell(4, 1, 'csu')
 data.setCell(4, 2, 'tests.BookingTest')
-data.setCell(4, 3, 4855);
+data.setCell(4, 3, 10592);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'menu')
+data.setCell(5, 1, 'voyageTab')
 data.setCell(5, 2, 'tests.BookingTest')
-data.setCell(5, 3, 248);
+data.setCell(5, 3, 9824);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'suiteTab')
+data.setCell(6, 1, 'login')
 data.setCell(6, 2, 'tests.BookingTest')
-data.setCell(6, 3, 196);
+data.setCell(6, 3, 8994);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'previewTab')
+data.setCell(7, 1, 'packageTab')
 data.setCell(7, 2, 'tests.BookingTest')
-data.setCell(7, 3, 0);
+data.setCell(7, 3, 4431);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'menu')
+data.setCell(8, 2, 'tests.BookingTest')
+data.setCell(8, 3, 174);
 window.suiteTableData['User_Suite']= { tableData: data, tableDiv: 'times-div-User_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 7 minutes</span>
               <div id="times-div-User_Suite">
               </div> <!-- times-div-User_Suite -->
             </div> <!-- times-div -->
@@ -388,33 +360,39 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">1665 ms</span>
+                <span class="method-start">1448 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">menu</span>
-                <span class="method-start">11723 ms</span>
+                <span class="method-start">10452 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">csu</span>
-                <span class="method-start">11975 ms</span>
+                <span class="method-start">10629 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">agent</span>
-                <span class="method-start">18172 ms</span>
+                <span class="method-start">21223 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">voyageTab</span>
-                <span class="method-start">92161 ms</span>
+                <span class="method-start">92411 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">packageTab</span>
-                <span class="method-start">100947 ms</span>
+                <span class="method-start">102237 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">suiteTab</span>
-                <span class="method-start">105806 ms</span>
+                <span class="method-start">106670 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">previewTab</span>
+                <span class="method-start">295316 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">newProfile</span>
+                <span class="method-start">366140 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
